# seqexec

./: .git-blame-ignore-revs  .gitignore  .mergify.yml  .scala-steward.conf  .scalafix-common.conf  .scalafix.conf  .scalafmt-common.conf  .scalafmt.conf  .travis.yml  DEPLOY.graffle  DEPLOY.md  DESIGN.md  EventLog.md  Jenkinsfile  LICENSE  README.md  StepIndex.md  Tips.md  build.sbt  create.sql  docker.md  flake.nix  gemctl  jenkins-build.sh  pg-image.txt  queries.sql  scalastyle-config.xml  transcript.md  travis-jvmopts  version.sbt
.github/workflows/: ci.yml  create-release.yml  packtracker.yml  scala.yml
GN-Utils/: Dockerfile.base  Dockerfile.dev  GN-README.md
SimpleGame/: README.md  build.sbt
api/: ToOTriggeringWithTOMs.yml
app/seqexec-server-ghost/src/main/resources/: app.conf
app/seqexec-server-gn-test-l64/src/main/resources/: app.conf
app/seqexec-server-gn-test/src/main/resources/: app.conf
app/seqexec-server-gn/src/main/resources/: app.conf
app/seqexec-server-gs-test/src/main/resources/: app.conf
app/seqexec-server-gs/src/main/resources/: app.conf
app/seqexec-server-igrins2/src/main/resources/: app.conf
app/seqexec-server-l64/src/templates/: bash-template
app/seqexec-server-test-l64/src/main/resources/: app.conf
app/seqexec-server/src/main/resources/: app.conf  seqexec-server.env  seqexec-server.service  update_smartgcal
app/seqexec/src/main/resources/: logging.properties
dockerfiles/: Dockerfile.gn  Dockerfile.gn_test  README  build_prod.sh  build_test.sh
modules/acm/: README.md
modules/acm/src/main/resources/: CaSchema.xsd
modules/acm/src/test/resources/: TestConfig.ca  giapi-apply-config.xsd
modules/ctl/: README.md
modules/ctl/src/main/scala/: Parsers.scala  command.scala  ctl.scala  docker.scala  git.scala  interp.scala  io.scala  ioref.scala  main.scala  opts.scala
modules/edu.gemini.epics.acm/src/main/resources/: CaSchema.xsd
modules/edu.gemini.epics.acm/src/test/resources/: TestConfig.xml  TestSim.xml
modules/edu.gemini.seqexec.engine/: build.sbt
modules/edu.gemini.seqexec.model/: build.sbt
modules/edu.gemini.seqexec.server/: TCS_Configuration.md  build.sbt
modules/edu.gemini.seqexec.server/src/main/resources/: DhsHdr.xml  Flamingos2.xml  Gmos.xml  Gnirs.xml  Gws.xml  Tcs.xml
modules/edu.gemini.seqexec.server/src/test/resources/: gmos-casdb.xml
modules/edu.gemini.seqexec.shared/: README.md  build.sbt
modules/edu.gemini.seqexec.web/: README.md  build.sbt
modules/edu.gemini.seqexec.web/edu.gemini.seqexec.web.client/: README.md  common.webpack.config.js  dev.webpack.config.js  prod.webpack.config.js
modules/edu.gemini.seqexec.web/edu.gemini.seqexec.web.client/src/webpack/: common.webpack.config.js  dev.webpack.config.js  prod.webpack.config.js  test.webpack.config.js  webpack.parts.js
modules/edu.gemini.seqexec.web/edu.gemini.seqexec.web.server/: README.md
modules/edu.gemini.seqexec.web/edu.gemini.seqexec.web.shared/: README.md
modules/engine-prototype/: README.md  build.sbt
modules/engine-prototype/project/: Dependencies.scala
modules/importer/src/main/scala/: ConfigReader.scala  Importer.scala  Reader.scala  SmartGcalImporter.scala  Tester.scala
modules/main/src/main/scala/: Main.scala  MainConfiguration.scala  MainServer.scala
modules/seqexec/web/: README.md
modules/seqexec/web/server/: TLS.md
modules/server/: TCS_Configuration.md
modules/web/server/: TLS.md
project/: AppsCommon.scala  Common.scala  ImageManifest.scala  OcsBuild.scala  Phase1BackendApps.scala  Phase1BackendModules.scala  SeqexecApps.scala  SeqexecEngineModules.scala  SeqexecWebModules.scala  Settings.scala  Settings.scala.orig  Version.scala  build.sbt  gen.scala  gen2.scala  plugins.sbt
project/project/: plugins.sbt
project/resources/: logging.console_files.template  logging.files.template  logging.properties
sql/: V001__Initial_Setup.sql  V002_Add_Event_Log.sql  V002__Add_Event_Log.sql  V004__Add_SmartGcal_Support.sql
src/main/scala/engine/: Execution.scala  Sequence.scala  Status.scala  Step.scala  package.scala
(+2835 files in other folders)
